--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ScreenWiper</string>
+     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDy5djqnjFFIzSfAS2nTwBxq6JRARxaUks</string>
 </resources>
